# openai2claude_api

./: .gitignore  README.md  pyproject.toml
src/openai2claude/: __init__.py  cli.py  config.py  proxy.py
src/openai2claude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_api.py  test_convert.py
