[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai2claude"
version = "0.1.1"
description = "Proxy Claude API requests to OpenAI-compatible backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "cyneck", email = "cyneck@hotmail.com"}
]
keywords = ["claude", "openai", "proxy", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "uvicorn[standard]>=0.24.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.28",
]

[project.scripts]
openai2claude = "openai2claude.cli:main"

[project.urls]
Homepage = "https://github.com/cyneck/openai2claude_api"
Repository = "https://github.com/cyneck/openai2claude_api"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openai2claude*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
